src/z80asm/z80asm2/t/40-syntax/expected/defc_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/defc_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/defc_01.asm...
Define constant: a1 = 1
t/40-syntax/input/defc_01.asm:1:5: error: Identifier expected
    defc
        ^
t/40-syntax/input/defc_01.asm:2:6: error: Identifier expected
    defc ,
         ^
t/40-syntax/input/defc_01.asm:3:9: error: Unterminated expression after "="
    defc a1 =
            ^
t/40-syntax/input/defc_01.asm:5:12: error: Unterminated expression after "+"
    defc a1 = 1+
               ^
Program: defc_01
    Modules:
        Module: defc_01 (current)
            Sections:
                Section: "" (current)
                    Size: 0
    Statements:
        DefcStmt
            Location: t/40-syntax/input/defc_01.asm:4:1
            Name: a1
            Address: 0
            Expression:
                ExprLiteralInt: 1
                    Location: t/40-syntax/input/defc_01.asm:4:11
                    Value type: Unknown
                    Expr: 1
        DefcStmt
            Location: t/40-syntax/input/defc_01.asm:6:1
            Name: a1
            Address: 0
            Expression:
                ExprSymbol: a2
                    Location: t/40-syntax/input/defc_01.asm:6:11
                    Value type: Unknown
                    Expr: a2
        DefcStmt
            Location: t/40-syntax/input/defc_01.asm:7:1
            Name: a1
            Address: 0
            Expression:
                ExprBinary: +
                    Location: t/40-syntax/input/defc_01.asm:7:14
                    Value type: Unknown
                    Expr: a2+a3
                    LHS:
                        ExprSymbol: a2
                            Location: t/40-syntax/input/defc_01.asm:7:11
                            Value type: Unknown
                    RHS:
                        ExprSymbol: a3
                            Location: t/40-syntax/input/defc_01.asm:7:14
                            Value type: Unknown
